#include "lobby_scene_handler.h"
#include "src/thread_local/thread_local_storage.h"
#include "src/network/message_system.h"
///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE
void LobbyServiceHandler::StartCrossGs(::google::protobuf::RpcController* controller,
	const ::StartCrossGsRequest* request,
	::StartCrossGsResponse* response,
	 ::google::protobuf::Closure* done)
{
///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE
}

void LobbyServiceHandler::StartControllerNode(::google::protobuf::RpcController* controller,
	const ::StartControllerRequest* request,
	::google::protobuf::Empty* response,
	 ::google::protobuf::Closure* done)
{
///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE
}

void LobbyServiceHandler::EnterCrossMainScene(::google::protobuf::RpcController* controller,
	const ::EnterCrossMainSceneRequest* request,
	::EnterCrossMainSceneResponese* response,
	 ::google::protobuf::Closure* done)
{
///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE
}

void LobbyServiceHandler::EnterCrossMainSceneWeightRoundRobin(::google::protobuf::RpcController* controller,
	const ::EnterCrossMainSceneWeightRoundRobinRequest* request,
	::EnterCrossRoomSceneSceneWeightRoundRobinResponse* response,
	 ::google::protobuf::Closure* done)
{
///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE
}

void LobbyServiceHandler::LeaveCrossMainScene(::google::protobuf::RpcController* controller,
	const ::LeaveCrossMainSceneRequest* request,
	::google::protobuf::Empty* response,
	 ::google::protobuf::Closure* done)
{
///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE
}

void LobbyServiceHandler::GameConnectToController(::google::protobuf::RpcController* controller,
	const ::GameConnectToControllerRequest* request,
	::google::protobuf::Empty* response,
	 ::google::protobuf::Closure* done)
{
///<<< BEGIN WRITING YOUR CODE
///<<< END WRITING YOUR CODE
}

